--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <hello-world></hello-world>
+  <span><a href="https://github.com/robwormald/ivy-code-size">GitHub</a> | <a href="http://ivy.angular.io">Implementation Status</a></span>
   <script src="bundle.js"></script>
 </body>
 </html>
